Add the production chain conveyor which permit to define inputs and outputs of operations
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1649 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -605,6 +605,7 @@ arb:
       #>cash_transfer: 'Cash transfer'
       company: 'الشركة'
       contact: 'الاتصالات'
+      #>cultivation: 'Cultivation'
       currency: 'العملة'
       custom_field: 'الحقول التكميلية'
       custom_field_choice: 'اختيار الحقل التكميلي'
@@ -637,6 +638,8 @@ arb:
       #>journal_entry_line: 'Journal entry line'
       journal_record: 'سجل المحاسبة' #!
       land_parcel: 'الكتلة'
+      #>land_parcel_group: 'Land parcel group'
+      #>land_parcel_kinship: 'Land parcel kinship'
       listing: 'الاستخراج'
       listing_node: 'عقدة الاستخراج'
       listing_node_item: 'عنصر غقدة الاستخراج'
@@ -652,6 +655,10 @@ arb:
       product: 'الانتاج'
       product_category: 'فئة الانتاج'
       product_component: 'عنصر الانتاج'
+      #>production_chain: 'Production chain'
+      #>production_chain_operation: 'Production chain operation'
+      #>production_chain_operation_line: 'Production chain operation line'
+      #>production_chain_operation_use: 'Production chain operation use'
       profession: 'المهنة'
       #>purchase_delivery: 'Purchase delivery'
       #>purchase_delivery_line: 'Purchase delivery line'
@@ -681,6 +688,7 @@ arb:
       tax_declaration: 'تصريح الضرائب'
       tool: 'الاداة'
       tracking: 'حصة ممكن عزوها'
+      #>tracking_state: 'Tracking state'
       transfer: 'التحويل'
       transport: 'وسيلة النقل'
       unit: 'الوحدة'
@@ -715,6 +723,7 @@ arb:
     areas: 'الرموز البريدية'
     arrived_on: 'وصل يوم'
     assimilated_taxes_amount: 'قيمة الضرائب المماثلة'
+    #>atmospheric_pressure: 'Atmospheric pressure'
     attorney: 'الوكيل'
     attorney_account: 'حساب مساعد الوكيل'
     attorney_account_id: 'حساب مساعد الوكيل'
@@ -738,6 +747,7 @@ arb:
     bic: 'BIC'
     boolean_value: 'القيمة المنطقية'
     born_on: 'تاريخ الميلاد'
+    #>building: 'Building'
     by_default: 'افتراضيا'
     cache: 'مخبأ'
     cash: 'الحسابات المصرفية المستخدمة'
@@ -752,6 +762,8 @@ arb:
     changes_reflected: 'انعكاس التغييرات'
     charges_accounts: 'حسابات الحمولة'
     check_number: 'رقم الشيك'
+    #>check_states: 'Check states'
+    #>child_land_parcel_id: 'Child land parcel'
     children: 'مواقع فرعية للتخزين'
     choice_complements: '"قائمة الخيارات"'
     choice_value: 'اختيار القيمة'
@@ -809,6 +821,7 @@ arb:
     critic_quantity_min: 'الكمية المنتفدة كحد ادنى'
     crypt_key: 'مفتاح التشفير'
     crypt_mode: 'طؤيقة التشفير'
+    #>cultivation_id: 'Cultivation'
     currencies: 'العملات'
     currency: 'العملة'
     #>currency_amount: 'Currency amount'
@@ -856,8 +869,8 @@ arb:
     depositable_payments: 'تسديد الدفعات نقدا'
     depositables_account: 'حساب معلق للدفعات النقدية'
     depositables_account_id: 'الحساب المعلق اادفعات النقدية'
-    depositer: 'الجابي'
-    depositer_id: 'الجابي'
+    depositer: 'الجابي' #!
+    depositer_id: 'الجابي' #!
     deposits: 'اقتطاعات البنك'
     description: 'الوصف'
     dest_contact: 'عنوان التسليم'
@@ -909,7 +922,9 @@ arb:
     establishments: 'المؤسسات'
     event_natures: 'نوع الحدث'
     events: 'الاحداث'
+    #>examinated_at: 'Examinated at'
     excise: 'عدد رسوم الدفع'
+    #>expected_duration: 'Expected duration'
     expense: 'التكلفة'
     expense_id: 'انفاق'
     expense_type: 'نوع التكلفة'
@@ -936,6 +951,7 @@ arb:
     for_purchases: 'منتجات الشراء'
     for_sales: 'منتجات البيع'
     format: 'التصميم'
+    #>from_operation_line_id: 'From operation line'
     full_name: 'الاسم بالكامل'
     function_title: 'الكياسة'
     future_events: 'احداث المستقبل'
@@ -944,6 +960,7 @@ arb:
     global_count: 'مجموع السكان'
     global_credit: 'الائتمان العالمي'
     global_debit: 'الانتاجية الاجمالية'
+    #>group_id: 'Group'
     has_downpayment: 'لديه عربون واحد'
     hashed_password: 'تشفير كلمة المرور'
     hour_duration: '(ساعة (ساعات'
@@ -1026,6 +1043,7 @@ arb:
     locked: 'مقفل'
     longitude: 'خطوط الطول'
     lost: 'الضائع'
+    #>luminance: 'Luminance'
     mail: 'البريد الالكتروني'
     major_accounts: 'الحسابات الئيسية'
     manage_stocks: 'ادارة الاسهم'
@@ -1044,6 +1062,7 @@ arb:
     nature_code: 'الرمز'
     nature_id: 'نوع'
     nature_label: 'طبيعة الملصق'
+    #>net_weight: 'Net weight'
     nic: 'واجهة بطاقة الشبكة'
     node: 'العقدة'
     node_id: 'عقدة'
@@ -1057,6 +1076,7 @@ arb:
     operation: 'العمل'
     operation_id: 'عمل'
     operation_lines: 'الواردات/الصادرات'
+    #>operation_nature_id: 'Operation type'
     operation_natures: 'انواع العمل'
     operation_uses: 'استخدامات الاداة'
     operations: 'الاعمال'
@@ -1077,6 +1097,7 @@ arb:
     paid_on: 'سددت يوم'
     parent: 'النسب'
     parent_id: 'نسب'
+    #>parent_land_parcel_id: 'Parent land parcel'
     parts: 'الاجزاء'
     parts_amount: 'القيمة المستخدمة'
     password: 'كلمة المرور'
@@ -1125,6 +1146,8 @@ arb:
     product_components: 'مكونات المنتج'
     product_id: 'المنتج'
     productable_products: 'المنتجات الممكن انتاجها'
+    #>production_chain_id: 'Production chain'
+    #>production_chain_operation_id: 'Production chain operation'
     products: 'المنتجات'
     products_accounts: 'حسابات المنتجات'
     profession: 'المهنة'
@@ -1165,6 +1188,7 @@ arb:
     reductions: 'طرق الخصومات'
     #>reference_number: 'Reference number'
     reflation_submissive: 'خاضع لانعاش اقتصادي'
+    #>relative_humidity: 'Relative humidity'
     remaining_duration: '(مدة الاستخدام المتبقي (ساعات '
     required: 'الزامي'
     reservoir: 'المخزن'
@@ -1252,6 +1276,7 @@ arb:
     tax_declarations: 'الاعلان عن الضرائب'
     tax_id: 'الضريبة'
     taxes: 'الضرائب'
+    #>temperature: 'Temperature'
     template: 'نموذج'
     template_id: 'نموذج'
     text_importance: 'ذو شأن'
@@ -1266,6 +1291,7 @@ arb:
     tool_id: 'اداة'
     tools: 'الادوات'
     tools_list: 'معدات'
+    #>total_weight: 'Total weight'
     tracking: 'الحصة'
     tracking_id: 'الحصة'
     tracking_serial: 'رقم الحصة'
@@ -1661,6 +1687,10 @@ arb:
       unknown_use_of_product: '(يجب تحديد الغاية من المنتج (شراء او بيع او تأجير' #!
     product_component:
       of_product: 'نتاج'
+    production_chain_operation:
+      natures:
+        #>input: 'One in, many out'
+        #>output: 'Many in, one out'
     purchase_order:
       label: '%{supplier} الى %{address}'
       purchase: 'Achat'
