--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -277,7 +277,7 @@ eng:
       land_parcel: 'Land parcel %{name}'
       land_parcel_create: 'Add a new land parcel'
       #>land_parcel_delete: 'Land parcel delete'
-      #>land_parcel_divide: 'Land parcel divide'
+      land_parcel_divide: 'Divide land parcel: %{name}'
       land_parcel_group_create: 'Add a new group of land parcels'
       #>land_parcel_group_delete: 'Land parcel group delete'
       land_parcel_group_update: 'Update group of land parcels: %{name}'
@@ -285,11 +285,6 @@ eng:
       land_parcel_update: 'Update land parcel: %{name}'
       land_parcels: 'Land parcels'
       #>land_parcels_map: 'Land parcels map'
-      production_chains: 'Production chains'
-      production_chain: 'Production chain: %{name}'
-      production_chain_create: 'Add a new production chain'
-      production_chain_update: 'Update production chain: %{name}'
-      production_chain_operation_create: 'Add a new operation in the production chain'
       operation: 'Operation Details %{name}'
       operation_create: 'Create a new operation'
       #>operation_delete: 'Operation delete'
@@ -301,6 +296,17 @@ eng:
       operation_update: 'Update operation %{name}'
       #>operation_use_create: 'Operation use create'
       operations: 'Operations'
+      production_chain: 'Production chain: %{name}'
+      #>production_chain_conveyor_create: 'Production chain conveyor create'
+      #>production_chain_conveyor_delete: 'Production chain conveyor delete'
+      #>production_chain_conveyor_update: 'Production chain conveyor update'
+      production_chain_create: 'Add a new production chain'
+      #>production_chain_delete: 'Production chain delete'
+      production_chain_operation_create: 'Add a new operation in the production chain'
+      #>production_chain_operation_delete: 'Production chain operation delete'
+      #>production_chain_operation_update: 'Production chain operation update'
+      production_chain_update: 'Update production chain: %{name}'
+      production_chains: 'Production chains'
       tool: 'Tool: %{name}'
       tool_create: 'Add a tool'
       #>tool_delete: 'Tool delete'
@@ -1199,6 +1205,7 @@ eng:
       one: '1 subscription'
       other: '%{count} subscriptions'
       zero: '0 subscriptions'
+    x_unit_of_product_per_second: '%{quantity}%{unit}/s of %{product}'
     y: 'Yes'
     yearly: 'Yearly'
   notifications:
