--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -196,6 +196,7 @@ fra:
       index: 'Gestion de la production'
       land_parcel: 'Îlot %{name}'
       land_parcel_create: 'Ajouter un nouvel îlot'
+      #>land_parcel_divide: 'Divide land parcel: %{name}'
       #>land_parcel_group_create: 'Add a new group of land parcels'
       #>land_parcel_group_update: 'Update group of land parcels: %{name}'
       #>land_parcel_groups: 'Groups of land parcels'
@@ -208,6 +209,11 @@ fra:
       operation_natures: 'Types de travail'
       operation_update: 'Modifier le travail %{name}'
       operations: 'Travaux'
+      #>production_chain: 'Production chain: %{name}'
+      #>production_chain_create: 'Add a new production chain'
+      #>production_chain_operation_create: 'Add a new operation in the production chain'
+      #>production_chain_update: 'Update production chain: %{name}'
+      #>production_chains: 'Production chains'
       tool: 'Matériel : %{name}'
       tool_create: 'Ajouter un matériel'
       tool_update: 'Modifier le matériel : %{name}'
@@ -1083,6 +1089,7 @@ fra:
       one: '%{count} abonnement'
       other: '%{count} abonnements'
       zero: '0 abonnement'
+    #>x_unit_of_product_per_second: '%{quantity}%{unit}/s of %{product}'
     y: 'Oui'
     yearly: 'Annuelle'
   notifications:
