--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -232,6 +232,7 @@ fra:
       cash_transfer: 'Virement de trésorerie'
       company: 'Société'
       contact: 'Contact'
+      #>cultivation: 'Cultivation'
       currency: 'Devise'
       custom_field: 'Champ complémentaire'
       custom_field_choice: 'Choix de champ complémentaire'
@@ -260,6 +261,8 @@ fra:
       journal_entry: 'Écriture'
       journal_entry_line: 'Ligne d''écriture'
       land_parcel: 'Îlot'
+      #>land_parcel_group: 'Land parcel group'
+      #>land_parcel_kinship: 'Land parcel kinship'
       listing: 'Extraction'
       listing_node: 'Noeud d''extraction'
       listing_node_item: 'Élément de noeud d''extraction'
@@ -274,6 +277,10 @@ fra:
       product: 'Produit'
       product_category: 'Catégorie de produit'
       product_component: 'Composant de produit'
+      #>production_chain: 'Production chain'
+      #>production_chain_operation: 'Production chain operation'
+      #>production_chain_operation_line: 'Production chain operation line'
+      #>production_chain_operation_use: 'Production chain operation use'
       profession: 'Profession'
       purchase_delivery: 'Arrivage'
       purchase_delivery_line: 'Ligne d''arrivage'
@@ -303,6 +310,7 @@ fra:
       tax_declaration: 'Déclaration de taxes'
       tool: 'Outil'
       tracking: 'Lot traçable'
+      #>tracking_state: 'Tracking state'
       transfer: 'Transfert'
       transport: 'Transport'
       unit: 'Unité'
@@ -337,6 +345,7 @@ fra:
     areas: 'Zones postales'
     arrived_on: 'Arrivé le'
     assimilated_taxes_amount: 'Montant des taxes assimilées'
+    #>atmospheric_pressure: 'Atmospheric pressure'
     attorney: 'Mandataire'
     attorney_account: 'Compte mandataire associé'
     attorney_account_id: 'Compte mandataire associé'
@@ -360,6 +369,7 @@ fra:
     bic: 'BIC'
     boolean_value: 'Valeur booléenne'
     born_on: 'Date de naissance'
+    #>building: 'Building'
     by_default: 'Par défaut'
     cache: 'Cache'
     cash: 'Trésorerie'
@@ -374,6 +384,8 @@ fra:
     changes_reflected: 'Refléter les changements'
     charges_accounts: 'Comptes de charge'
     check_number: 'N°Chèque'
+    #>check_states: 'Check states'
+    #>child_land_parcel_id: 'Child land parcel'
     children: 'Sous-noeuds'
     choice_complements: 'Chmaps complémentaires "liste de choix"'
     choice_value: 'Valeur choix'
@@ -431,6 +443,7 @@ fra:
     critic_quantity_min: 'Quantité minimum critique'
     crypt_key: 'Clé de cryptage'
     crypt_mode: 'Mode de cryptage'
+    #>cultivation_id: 'Cultivation'
     currencies: 'Devises'
     currency: 'Devise'
     currency_amount: 'Montant d''origine'
@@ -478,8 +491,8 @@ fra:
     depositable_payments: 'Encaissements encaissables'
     depositables_account: 'Compte d''attente pour les encaissements à encaisser'
     depositables_account_id: 'Compte d''attente pour les encaissements à encaisser'
-    depositer: 'Responsable'
-    depositer_id: 'Responsable'
+    depositer: 'Responsable' #!
+    depositer_id: 'Responsable' #!
     deposits: 'Remises en banque'
     description: 'Description'
     dest_contact: 'Adresse de livraison'
@@ -531,7 +544,9 @@ fra:
     establishments: 'Établissements'
     event_natures: 'Types d''évènement'
     events: 'Évènements'
+    #>examinated_at: 'Examinated at'
     excise: 'Numéro d''accises'
+    #>expected_duration: 'Expected duration'
     expense: 'Dépense'
     expense_id: 'Dépense'
     expense_type: 'Type de dépense'
@@ -558,6 +573,7 @@ fra:
     for_purchases: 'Produit acheté'
     for_sales: 'Produit vendu'
     format: 'Format'
+    #>from_operation_line_id: 'From operation line'
     full_name: 'Nom complet'
     function_title: 'Civilités'
     future_events: 'Evènements futurs'
@@ -566,6 +582,7 @@ fra:
     global_count: 'Population globale'
     global_credit: 'Crédit global'
     global_debit: 'Débit global'
+    #>group_id: 'Group'
     has_downpayment: 'A un acompte'
     hashed_password: 'Mot de passe crypté'
     hour_duration: 'Heure(s)'
@@ -645,6 +662,7 @@ fra:
     locked: 'Verrouillé'
     longitude: 'Longitude'
     lost: 'En perte'
+    #>luminance: 'Luminance'
     mail: 'E-mail'
     major_accounts: 'Classes comptables'
     manage_stocks: 'Gérer les stocks'
@@ -663,6 +681,7 @@ fra:
     nature_code: 'Code'
     nature_id: 'Type'
     nature_label: 'Type'
+    #>net_weight: 'Net weight'
     nic: 'NIC (Numéro Interne de Classement)'
     node: 'Noeud'
     node_id: 'Noeud'
@@ -676,6 +695,7 @@ fra:
     operation: 'Travail'
     operation_id: 'Travail'
     operation_lines: 'Intrants/sortants'
+    #>operation_nature_id: 'Operation type'
     operation_natures: 'Types de travail'
     operation_uses: 'Utilisations d''outil'
     operations: 'Travaux'
@@ -696,6 +716,7 @@ fra:
     paid_on: 'Réglé le'
     parent: 'Parent'
     parent_id: 'Parent'
+    #>parent_land_parcel_id: 'Parent land parcel'
     parts: 'Affectations'
     parts_amount: 'Montant utilisé'
     password: 'Mot de passe'
@@ -744,6 +765,8 @@ fra:
     product_components: 'Composants de produit'
     product_id: 'Produit'
     productable_products: 'Produits produisibles'
+    #>production_chain_id: 'Production chain'
+    #>production_chain_operation_id: 'Production chain operation'
     products: 'Produits'
     products_accounts: 'Comptes produits'
     profession: 'Profession'
@@ -785,6 +808,7 @@ fra:
     reductions: 'Lignes de réductions'
     reference_number: 'N°Référence'
     reflation_submissive: 'Soumis à la relance'
+    #>relative_humidity: 'Relative humidity'
     remaining_duration: 'Durée d''utilisation prévue (heures)'
     required: 'Obligatoire'
     reservoir: 'Réservoir'
@@ -872,6 +896,7 @@ fra:
     tax_declarations: 'Déclarations de taxes'
     tax_id: 'Taxe'
     taxes: 'Taxes'
+    #>temperature: 'Temperature'
     template: 'Modèle'
     template_id: 'Modèle'
     text_importance: 'Importance'
@@ -886,6 +911,7 @@ fra:
     tool_id: 'Outil'
     tools: 'Outils'
     tools_list: 'Matériel'
+    #>total_weight: 'Total weight'
     tracking: 'Lot'
     tracking_id: 'Lot'
     tracking_serial: 'Numéro de lot'
@@ -1248,6 +1274,10 @@ fra:
         sales: 'Vente'
     product_component:
       of_product: 'du produit'
+    production_chain_operation:
+      natures:
+        #>input: 'One in, many out'
+        #>output: 'Many in, one out'
     purchase_order:
       label: '%{supplier} à %{address}'
       purchase: 'Achat'
