--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -194,6 +194,7 @@ spa:
       #>index: 'Production Management'
       #>land_parcel: 'Land parcel %{name}'
       #>land_parcel_create: 'Add a new land parcel'
+      #>land_parcel_divide: 'Divide land parcel: %{name}'
       #>land_parcel_group_create: 'Add a new group of land parcels'
       #>land_parcel_group_update: 'Update group of land parcels: %{name}'
       #>land_parcel_groups: 'Groups of land parcels'
@@ -206,6 +207,11 @@ spa:
       #>operation_natures: 'Types of operation'
       #>operation_update: 'Update operation %{name}'
       #>operations: 'Operations'
+      #>production_chain: 'Production chain: %{name}'
+      #>production_chain_create: 'Add a new production chain'
+      #>production_chain_operation_create: 'Add a new operation in the production chain'
+      #>production_chain_update: 'Update production chain: %{name}'
+      #>production_chains: 'Production chains'
       #>tool: 'Tool: %{name}'
       #>tool_create: 'Add a tool'
       #>tool_update: 'Update tool: %{name}'
@@ -1104,6 +1110,7 @@ spa:
       #>one: '1 subscription'
       #>other: '%{count} subscriptions'
       #>zero: '0 subscriptions'
+    #>x_unit_of_product_per_second: '%{quantity}%{unit}/s of %{product}'
     #>y: 'Yes'
     yearly: 'Anual'
   notifications:
