--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -196,6 +196,7 @@ arb:
       index: 'ادارة الانتاج'
       land_parcel: 'نظام {{name}}'
       land_parcel_create: 'اضافة نظام جديد'
+      #>land_parcel_divide: 'Divide land parcel: %{name}'
       #>land_parcel_group_create: 'Add a new group of land parcels'
       #>land_parcel_group_update: 'Update group of land parcels: %{name}'
       #>land_parcel_groups: 'Groups of land parcels'
@@ -208,6 +209,11 @@ arb:
       operation_natures: 'اواع العمل'
       operation_update: 'تعدل العمل {{name}}'
       operations: 'اعمال'
+      #>production_chain: 'Production chain: %{name}'
+      #>production_chain_create: 'Add a new production chain'
+      #>production_chain_operation_create: 'Add a new operation in the production chain'
+      #>production_chain_update: 'Update production chain: %{name}'
+      #>production_chains: 'Production chains'
       tool: 'المادة : {{name}}'
       tool_create: 'اضافة مادة'
       tool_update: 'تعديل المادة : {{name}}'
@@ -1160,6 +1166,7 @@ arb:
       one: 'اشتراك واحد'
       other: '{{count}} اشتراكات اخرى'
       zero: 'ولا اية اشتراك'
+    #>x_unit_of_product_per_second: '%{quantity}%{unit}/s of %{product}'
     y: 'نعم'
     yearly: 'Annuelle'
   notifications:
