--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -232,6 +232,7 @@ jpn:
       #>cash_transfer: 'Cash transfer'
       company: '会社'
       #>contact: 'Contact'
+      #>cultivation: 'Cultivation'
       #>currency: 'Currency'
       #>custom_field: 'Complement field'
       #>custom_field_choice: 'Complement field choice'
@@ -260,6 +261,8 @@ jpn:
       #>journal_entry: 'Journal entry'
       #>journal_entry_line: 'Journal entry line'
       #>land_parcel: 'Land parcel'
+      #>land_parcel_group: 'Land parcel group'
+      #>land_parcel_kinship: 'Land parcel kinship'
       #>listing: 'Listing'
       #>listing_node: 'Listing node'
       #>listing_node_item: 'Listing node item'
@@ -274,6 +277,10 @@ jpn:
       #>product: 'Product'
       #>product_category: 'Product category'
       #>product_component: 'Product component'
+      #>production_chain: 'Production chain'
+      #>production_chain_operation: 'Production chain operation'
+      #>production_chain_operation_line: 'Production chain operation line'
+      #>production_chain_operation_use: 'Production chain operation use'
       #>profession: 'Profession'
       #>purchase_delivery: 'Purchase delivery'
       #>purchase_delivery_line: 'Purchase delivery line'
@@ -303,6 +310,7 @@ jpn:
       #>tax_declaration: 'Tax declaration'
       #>tool: 'Tool'
       #>tracking: 'Tracking'
+      #>tracking_state: 'Tracking state'
       #>transfer: 'Transfer'
       #>transport: 'Transport'
       #>unit: 'Unit'
@@ -337,6 +345,7 @@ jpn:
     #>areas: 'Areas'
     #>arrived_on: 'Arrived on'
     #>assimilated_taxes_amount: 'Assimilated taxes amount'
+    #>atmospheric_pressure: 'Atmospheric pressure'
     #>attorney: 'Attorney'
     #>attorney_account: 'Attorney account'
     #>attorney_account_id: 'Attorney account'
@@ -360,6 +369,7 @@ jpn:
     #>bic: 'Bic'
     #>boolean_value: 'Boolean value'
     #>born_on: 'Born on'
+    #>building: 'Building'
     #>by_default: 'By default'
     #>cache: 'Cache'
     #>cash: 'Cash'
@@ -374,6 +384,8 @@ jpn:
     #>changes_reflected: 'Changes reflected'
     #>charges_accounts: 'Charges accounts'
     #>check_number: 'Check number'
+    #>check_states: 'Check states'
+    #>child_land_parcel_id: 'Child land parcel'
     #>children: 'Children'
     #>choice_complements: 'Choice complements'
     #>choice_value: 'Choice value'
@@ -431,6 +443,7 @@ jpn:
     #>critic_quantity_min: 'Critic quantity min'
     #>crypt_key: 'Crypt key'
     #>crypt_mode: 'Crypt mode'
+    #>cultivation_id: 'Cultivation'
     #>currencies: 'Currencies'
     #>currency: 'Currency'
     #>currency_amount: 'Currency amount'
@@ -478,8 +491,6 @@ jpn:
     #>depositable_payments: 'Embankable payments'
     #>depositables_account: 'Embankables account'
     #>depositables_account_id: 'Embankables account'
-    #>depositer: 'Embanker'
-    #>depositer_id: 'Embanker'
     #>deposits: 'Deposits'
     #>description: 'Description'
     #>dest_contact: 'Dest contact'
@@ -531,7 +542,9 @@ jpn:
     #>establishments: 'Establishments'
     #>event_natures: 'Event types'
     #>events: 'Events'
+    #>examinated_at: 'Examinated at'
     #>excise: 'Excise'
+    #>expected_duration: 'Expected duration'
     #>expense: 'Expense'
     #>expense_id: 'Expense'
     #>expense_type: 'Expense type'
@@ -558,6 +571,7 @@ jpn:
     #>for_purchases: 'For purchases'
     #>for_sales: 'For sales'
     #>format: 'Format'
+    #>from_operation_line_id: 'From operation line'
     #>full_name: 'Full name'
     #>function_title: 'Function title'
     #>future_events: 'Future events'
@@ -566,6 +580,7 @@ jpn:
     #>global_count: 'Global count'
     #>global_credit: 'Global credit'
     #>global_debit: 'Global debit'
+    #>group_id: 'Group'
     #>has_downpayment: 'Has downpayment'
     #>hashed_password: 'Hashed password'
     #>hour_duration: 'Hour duration'
@@ -645,6 +660,7 @@ jpn:
     #>locked: 'Locked'
     #>longitude: 'Longitude'
     #>lost: 'Lost'
+    #>luminance: 'Luminance'
     #>mail: 'Mail'
     #>major_accounts: 'Major accounts'
     #>manage_stocks: 'Manage stocks'
@@ -663,6 +679,7 @@ jpn:
     #>nature_code: 'Type code'
     #>nature_id: 'Type'
     #>nature_label: 'Type label'
+    #>net_weight: 'Net weight'
     #>nic: 'Nic'
     #>node: 'Node'
     #>node_id: 'Node'
@@ -676,6 +693,7 @@ jpn:
     #>operation: 'Operation'
     #>operation_id: 'Operation'
     #>operation_lines: 'Operation lines'
+    #>operation_nature_id: 'Operation type'
     #>operation_natures: 'Operation types'
     #>operation_uses: 'Tool uses'
     #>operations: 'Operations'
@@ -696,6 +714,7 @@ jpn:
     #>paid_on: 'Paid on'
     parent: '親戚'
     parent_id: '親戚'
+    #>parent_land_parcel_id: 'Parent land parcel'
     #>parts: 'Parts'
     #>parts_amount: 'Parts amount'
     #>password: 'Password'
@@ -744,6 +763,8 @@ jpn:
     #>product_components: 'Product components'
     #>product_id: 'Product'
     #>productable_products: 'Productable products'
+    #>production_chain_id: 'Production chain'
+    #>production_chain_operation_id: 'Production chain operation'
     #>products: 'Products'
     #>products_accounts: 'Products accounts'
     #>profession: 'Profession'
@@ -784,6 +805,7 @@ jpn:
     #>reductions: 'Reductions'
     #>reference_number: 'Reference number'
     #>reflation_submissive: 'Reflation submissive'
+    #>relative_humidity: 'Relative humidity'
     #>remaining_duration: 'Remaining duration'
     #>required: 'Required'
     #>reservoir: 'Reservoir'
@@ -871,6 +893,7 @@ jpn:
     #>tax_declarations: 'Tax declarations'
     #>tax_id: 'Tax'
     #>taxes: 'Taxes'
+    #>temperature: 'Temperature'
     #>template: 'Template'
     #>template_id: 'Template'
     #>text_importance: 'Text importance'
@@ -885,6 +908,7 @@ jpn:
     #>tool_id: 'Tool'
     #>tools: 'Tools'
     #>tools_list: 'Tools list'
+    #>total_weight: 'Total weight'
     #>tracking: 'Tracking'
     #>tracking_id: 'Tracking'
     #>tracking_serial: 'Tracking serial'
@@ -1254,6 +1278,10 @@ jpn:
         #>sales: 'Sales'
     product_component:
       #>of_product: 'of product'
+    production_chain_operation:
+      natures:
+        #>input: 'One in, many out'
+        #>output: 'Many in, one out'
     purchase_order:
       #>label: '%{supplier} at %{address}'
       #>purchase: 'Purchase'
