--- a/config/locales/spa/rights.yml
+++ b/config/locales/spa/rights.yml
@@ -2,6 +2,7 @@ spa:
   rights:
     #>accountize: 'Transfer commercial data in accountancy'
     #>backup_company: 'Make and reload backups'
+    #>build_production_chains: '(((BUILD_PRODUCTION_CHAINS)))'
     #>cancel_invoices: 'Cancel invoices'
     #>change_prices_on_sale: 'Change prices on sales'
     #>close_journals: 'Close and reopen journals'
@@ -67,3 +68,4 @@ spa:
     #>__minimum__: 'Access to the minimum'
     #>__not_used__: 'Inaccessible'
     #>print: 'Print'
+    #>use_production_chains: '(((USE_PRODUCTION_CHAINS)))'
