--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -210,8 +210,10 @@ arb:
       operation_update: 'تعدل العمل {{name}}'
       operations: 'اعمال'
       #>production_chain: 'Production chain: %{name}'
+      #>production_chain_conveyor_create: 'Add a new conveyor in the production chain'
       #>production_chain_create: 'Add a new production chain'
       #>production_chain_operation_create: 'Add a new operation in the production chain'
+      #>production_chain_play: 'Play production chain: %{name}'
       #>production_chain_update: 'Update production chain: %{name}'
       #>production_chains: 'Production chains'
       tool: 'المادة : {{name}}'
@@ -1166,6 +1168,7 @@ arb:
       one: 'اشتراك واحد'
       other: '{{count}} اشتراكات اخرى'
       zero: 'ولا اية اشتراك'
+    #>x_unit: '%{quantity}%{unit}'
     #>x_unit_of_product_per_second: '%{quantity}%{unit}/s of %{product}'
     y: 'نعم'
     yearly: 'Annuelle'
