--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -297,14 +297,16 @@ eng:
       #>operation_use_create: 'Operation use create'
       operations: 'Operations'
       production_chain: 'Production chain: %{name}'
-      #>production_chain_conveyor_create: 'Production chain conveyor create'
+      production_chain_conveyor_create: 'Add a new conveyor in the production chain'
       #>production_chain_conveyor_delete: 'Production chain conveyor delete'
       #>production_chain_conveyor_update: 'Production chain conveyor update'
       production_chain_create: 'Add a new production chain'
       #>production_chain_delete: 'Production chain delete'
+      #>production_chain_operation: 'Production chain operation'
       production_chain_operation_create: 'Add a new operation in the production chain'
       #>production_chain_operation_delete: 'Production chain operation delete'
       #>production_chain_operation_update: 'Production chain operation update'
+      production_chain_play: 'Play production chain: %{name}'
       production_chain_update: 'Update production chain: %{name}'
       production_chains: 'Production chains'
       tool: 'Tool: %{name}'
@@ -1205,6 +1207,7 @@ eng:
       one: '1 subscription'
       other: '%{count} subscriptions'
       zero: '0 subscriptions'
+    x_unit: '%{quantity}%{unit}'
     x_unit_of_product_per_second: '%{quantity}%{unit}/s of %{product}'
     y: 'Yes'
     yearly: 'Yearly'
