--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -210,8 +210,10 @@ fra:
       operation_update: 'Modifier le travail %{name}'
       operations: 'Travaux'
       #>production_chain: 'Production chain: %{name}'
+      #>production_chain_conveyor_create: 'Add a new conveyor in the production chain'
       #>production_chain_create: 'Add a new production chain'
       #>production_chain_operation_create: 'Add a new operation in the production chain'
+      #>production_chain_play: 'Play production chain: %{name}'
       #>production_chain_update: 'Update production chain: %{name}'
       #>production_chains: 'Production chains'
       tool: 'Matériel : %{name}'
@@ -1089,6 +1091,7 @@ fra:
       one: '%{count} abonnement'
       other: '%{count} abonnements'
       zero: '0 abonnement'
+    #>x_unit: '%{quantity}%{unit}'
     #>x_unit_of_product_per_second: '%{quantity}%{unit}/s of %{product}'
     y: 'Oui'
     yearly: 'Annuelle'
