--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -208,8 +208,10 @@ spa:
       #>operation_update: 'Update operation %{name}'
       #>operations: 'Operations'
       #>production_chain: 'Production chain: %{name}'
+      #>production_chain_conveyor_create: 'Add a new conveyor in the production chain'
       #>production_chain_create: 'Add a new production chain'
       #>production_chain_operation_create: 'Add a new operation in the production chain'
+      #>production_chain_play: 'Play production chain: %{name}'
       #>production_chain_update: 'Update production chain: %{name}'
       #>production_chains: 'Production chains'
       #>tool: 'Tool: %{name}'
@@ -1110,6 +1112,7 @@ spa:
       #>one: '1 subscription'
       #>other: '%{count} subscriptions'
       #>zero: '0 subscriptions'
+    #>x_unit: '%{quantity}%{unit}'
     #>x_unit_of_product_per_second: '%{quantity}%{unit}/s of %{product}'
     #>y: 'Yes'
     yearly: 'Anual'
