Add concept of token in production for the tracking
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1653 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -765,6 +765,7 @@ spa:
     #>productable_products: 'Productable products'
     #>production_chain_id: 'Production chain'
     #>production_chain_operation_id: 'Production chain operation'
+    #>production_chain_token_id: 'Production chain token'
     #>products: 'Products'
     #>products_accounts: 'Products accounts'
     #>profession: 'Profession'
