--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -211,8 +211,10 @@ arb:
       operations: 'اعمال'
       #>production_chain: 'Production chain: %{name}'
       #>production_chain_conveyor_create: 'Add a new conveyor in the production chain'
+      #>production_chain_conveyor_update: 'Update production chain conveyor (%{source_id}-%{target_id})'
       #>production_chain_create: 'Add a new production chain'
       #>production_chain_operation_create: 'Add a new operation in the production chain'
+      #>production_chain_operation_update: 'Update the production chain operation: %{name}'
       #>production_chain_play: 'Play production chain: %{name}'
       #>production_chain_update: 'Update production chain: %{name}'
       #>production_chains: 'Production chains'
@@ -1056,6 +1058,7 @@ arb:
     #>supplier_informations: 'Supplier informations '
     supply: 'التسليم'
     synthesis: 'تجميع الوثائق'
+    #>target: 'Target'
     tax_create: 'اضافة ضريبة جديدة' #!
     tax_declaration_create: 'اضافة تصريح جديد'
     theoric_quantity: 'الكمية النظرية'
