--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -299,7 +299,7 @@ eng:
       production_chain: 'Production chain: %{name}'
       production_chain_conveyor_create: 'Add a new conveyor in the production chain'
       #>production_chain_conveyor_delete: 'Production chain conveyor delete'
-      #>production_chain_conveyor_update: 'Production chain conveyor update'
+      production_chain_conveyor_update: 'Update production chain conveyor (%{source_id}-%{target_id})'
       production_chain_create: 'Add a new production chain'
       #>production_chain_delete: 'Production chain delete'
       #>production_chain_operation: 'Production chain operation'
@@ -307,7 +307,7 @@ eng:
       #>production_chain_operation_delete: 'Production chain operation delete'
       #>production_chain_operation_down: 'Production chain operation down'
       #>production_chain_operation_up: 'Production chain operation up'
-      #>production_chain_operation_update: 'Production chain operation update'
+      production_chain_operation_update: 'Update the production chain operation: %{name}'
       production_chain_play: 'Play production chain: %{name}'
       production_chain_update: 'Update production chain: %{name}'
       production_chains: 'Production chains'
@@ -1110,6 +1110,7 @@ eng:
     supplier_informations: 'Supplier informations '
     supply: 'Supply'
     synthesis: 'Synthesis Documents'
+    target: 'Target'
     tax_declaration_create: 'Add a new Declaration'
     theoric_quantity: 'Theoric quantity'
     to: 'to'
