--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -211,8 +211,10 @@ fra:
       operations: 'Travaux'
       #>production_chain: 'Production chain: %{name}'
       #>production_chain_conveyor_create: 'Add a new conveyor in the production chain'
+      #>production_chain_conveyor_update: 'Update production chain conveyor (%{source_id}-%{target_id})'
       #>production_chain_create: 'Add a new production chain'
       #>production_chain_operation_create: 'Add a new operation in the production chain'
+      #>production_chain_operation_update: 'Update the production chain operation: %{name}'
       #>production_chain_play: 'Play production chain: %{name}'
       #>production_chain_update: 'Update production chain: %{name}'
       #>production_chains: 'Production chains'
@@ -992,6 +994,7 @@ fra:
     supplier_informations: 'Informations fournisseur'
     supply: 'Livraison'
     synthesis: 'Documents de synthèse'
+    #>target: 'Target'
     tax_declaration_create: 'Ajouter une nouvelle déclaration'
     theoric_quantity: 'Quantité théorique'
     to: 'Au'
