--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -209,8 +209,10 @@ spa:
       #>operations: 'Operations'
       #>production_chain: 'Production chain: %{name}'
       #>production_chain_conveyor_create: 'Add a new conveyor in the production chain'
+      #>production_chain_conveyor_update: 'Update production chain conveyor (%{source_id}-%{target_id})'
       #>production_chain_create: 'Add a new production chain'
       #>production_chain_operation_create: 'Add a new operation in the production chain'
+      #>production_chain_operation_update: 'Update the production chain operation: %{name}'
       #>production_chain_play: 'Play production chain: %{name}'
       #>production_chain_update: 'Update production chain: %{name}'
       #>production_chains: 'Production chains'
@@ -1008,6 +1010,7 @@ spa:
     #>supplier_informations: 'Supplier informations '
     #>supply: 'Supply'
     synthesis: 'Documentos de sintesis'
+    #>target: 'Target'
     tax_create: 'Añadir una nueva tasa' #!
     tax_declaration_create: 'Añadir una nueva declaración'
     theoric_quantity: 'cantidad teorica'
