--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -920,7 +920,6 @@ eng:
     tools_list: 'Tools list'
     total_weight: 'Total weight'
     tracking: 'Tracking'
-    #>tracking_code: 'Tracking code'
     tracking_id: 'Tracking'
     tracking_serial: 'Tracking serial'
     trackings: 'Trackings'
@@ -934,6 +933,7 @@ eng:
     transports: 'Transports'
     type: 'Type'
     undelivered_quantity: 'Undelivered quantity'
+    #>unique_tracking: 'Unique tracking'
     unit: 'Unit'
     unit_id: 'Unit'
     unit_quantity: 'Unit quantity'
