Add accounts load and add fixtures
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1655 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -697,12 +697,8 @@ arb:
   attributes:
     account: 'الحساب'
     account_balances: 'ارصدة الحسابات'
-    account_collected: 'جمع قيمة الضريبة الاضافية'
-    account_collected_id: 'جمع قيمة الضريبة الاضافية'
     account_id: 'حساب'
     account_number: 'رقم الحساب'
-    account_paid: 'سددت القيمة الضريبية الاضافية'
-    account_paid_id: 'سددت القيمة الضريبية الاضافية'
     accounted_at: 'تمت محاسبته يوم'
     accounts: 'الحسابات'
     acquisition_amount: 'قيمة الاقتناء'
@@ -783,6 +779,8 @@ arb:
     code: 'الرمز'
     code2: 'الرمز الثاني'
     coefficient: 'الدرجة'
+    collected_account: 'جمع قيمة الضريبة الاضافية'
+    collected_account_id: 'جمع قيمة الضريبة الاضافية'
     collected_amount: 'قيمة الضريبة الاضافية الاجمالية'
     #>color: 'Color'
     comment: 'التعليق'
@@ -1093,6 +1091,8 @@ arb:
     owner_id: 'مالك'
     owner_type: 'طبيعة المالك'
     paid: 'سددت'
+    paid_account: 'سددت القيمة الضريبية الاضافية'
+    paid_account_id: 'سددت القيمة الضريبية الاضافية'
     paid_amount: 'خصمة من قيمة الضريبة الاضافية'
     paid_on: 'سددت يوم'
     parent: 'النسب'
