--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -9,6 +9,7 @@ eng:
       account_update: 'Update account: %{number} - %{name}'
       accountize: 'Flip book'
       accounts: 'Plan of accounts'
+      #>accounts_load: 'Accounts load'
       balance: 'Balance'
       bank_statement: 'Account statement N°%{number}'
       bank_statement_create: 'Create a new account statement'
@@ -306,9 +307,10 @@ eng:
       production_chain_operation_create: 'Add a new operation in the production chain'
       #>production_chain_operation_delete: 'Production chain operation delete'
       #>production_chain_operation_down: 'Production chain operation down'
+      #>production_chain_operation_play: 'Production chain operation play'
       #>production_chain_operation_up: 'Production chain operation up'
       production_chain_operation_update: 'Update the production chain operation: %{name}'
-      production_chain_play: 'Play production chain: %{name}'
+      production_chain_play: 'Play production chain: %{name}' #!
       production_chain_update: 'Update production chain: %{name}'
       production_chains: 'Production chains'
       tool: 'Tool: %{name}'
