--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -321,12 +321,8 @@ eng:
   attributes:
     account: 'Account'
     account_balances: 'Account balances'
-    account_collected: 'Account collected'
-    account_collected_id: 'Account collected'
     account_id: 'Account'
     account_number: 'Account number'
-    account_paid: 'Account paid'
-    account_paid_id: 'Account paid'
     accounted_at: 'Accounted at'
     accounts: 'Accounts'
     acquisition_amount: 'Acquisition amount'
@@ -409,6 +405,8 @@ eng:
     code: 'Code'
     code2: 'Code2'
     coefficient: 'Coefficient'
+    collected_account: 'Account collected'
+    collected_account_id: 'Account collected'
     collected_amount: 'Collected amount'
     color: 'Color'
     comment: 'Comment'
@@ -434,7 +432,7 @@ eng:
     contact_id: 'Contact'
     contacts: 'Contacts'
     counterpart: 'Counterpart'
-    counterpart_id: 'Counterpart'
+    counterpart_id: 'Counterpart' #!
     country: 'Country'
     created_at: 'Created at'
     created_on: 'Created on'
@@ -715,6 +713,8 @@ eng:
     owner_id: 'Owner'
     owner_type: 'Owner type'
     paid: 'Paid'
+    paid_account: 'Account paid'
+    paid_account_id: 'Account paid'
     paid_amount: 'Paid amount'
     paid_on: 'Paid on'
     parent: 'Parent'
@@ -962,6 +962,8 @@ eng:
     webpass: 'Webpass'
     website: 'Website'
     weight: 'Weight'
+    #>where_id: 'Where'
+    #>where_type: 'Where type'
     with_accounting: 'With accounting'
     with_commission: 'With commission'
     with_deposit: 'With deposit'
