--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -319,12 +319,8 @@ fra:
   attributes:
     account: 'Compte comptable'
     account_balances: 'Balances de compte'
-    account_collected: 'TVA collectée'
-    account_collected_id: 'TVA collectée'
     account_id: 'Compte comptable'
     account_number: 'Numéro de compte'
-    account_paid: 'TVA déductible'
-    account_paid_id: 'TVA déductible'
     accounted_at: 'Date comptabilisation'
     accounts: 'Comptes'
     acquisition_amount: 'Montant des acquisition'
@@ -405,6 +401,8 @@ fra:
     code: 'Code'
     code2: 'Code secondaire'
     coefficient: 'Coefficient'
+    collected_account: 'TVA collectée'
+    collected_account_id: 'TVA collectée'
     collected_amount: 'TVA brute'
     #>color: 'Color'
     comment: 'Commentaire'
@@ -712,6 +710,8 @@ fra:
     owner_id: 'Propriétaire'
     owner_type: 'Nature du propriétaire'
     paid: 'Réglée'
+    paid_account: 'TVA déductible'
+    paid_account_id: 'TVA déductible'
     paid_amount: 'TVA déductible'
     paid_on: 'Réglé le'
     parent: 'Parent'
